[package]
name = "turtle-rust"
version = "0.1.0"
authors = ["Andy C King <andycking@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.druid]
version = "0.7.0"
features = ["png"]
git = "https://github.com/linebender/druid"

[dependencies.futures]
version = "0.3.15"
features = ["executor", "thread-pool"]
